--- a/LemonPlatform.Module.DataStructure/Views/MaxHeapView.xaml
+++ b/LemonPlatform.Module.DataStructure/Views/MaxHeapView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LemonPlatform.Module.DataStructure.Views.MaxHeapView"
+﻿<Page x:Class="LemonPlatform.Module.DataStructure.Views.MaxHeapView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,4 +9,4 @@
     <Grid>
             
     </Grid>
-</UserControl>
+</Page>
