--- a/LemonPlatform.Module.DataStructure/Views/SkipListView.xaml
+++ b/LemonPlatform.Module.DataStructure/Views/SkipListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LemonPlatform.Module.DataStructure.Views.SkipListView"
+﻿<Page x:Class="LemonPlatform.Module.DataStructure.Views.SkipListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,14 +9,10 @@
              d:DesignHeight="450"
              d:DesignWidth="800">
     <Grid Margin="10">
-        <TextBlock Text="Skip list"/>
         <ScrollViewer
                 VerticalScrollBarVisibility="Auto"
                 HorizontalScrollBarVisibility="Auto">
-            <controls:LemonSKElement 
-                Width="500"
-                Height="200"
-                Render="{Binding Render,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+            <controls:LemonSKElement Render="{Binding Render,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         </ScrollViewer>
     </Grid>
-</UserControl>
+</Page>
