--- a/LemonPlatform.Module.Hello/Views/HelloView.xaml
+++ b/LemonPlatform.Module.Hello/Views/HelloView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LemonPlatform.Module.Hello.Views.HelloView"
+﻿<Page x:Class="LemonPlatform.Module.Hello.Views.HelloView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,16 +8,16 @@
       mc:Ignorable="d" 
       d:DesignHeight="450"
       d:DesignWidth="800">
-    <UserControl.Resources>
+    <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/LemonPlatform.Core;component/Themes/LemonTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </UserControl.Resources>
+    </Page.Resources>
 
     <Grid>
         <TextBlock Text="{Binding Time}"/>
         <Button Command="{Binding DfsCommand}" Content="Cancel" Width="200"/>
     </Grid>
-</UserControl>
+</Page>
