--- a/LemonPlatform.Module.Json/Views/JsonView.xaml
+++ b/LemonPlatform.Module.Json/Views/JsonView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LemonPlatform.Module.Json.Views.JsonView"
+﻿<Page x:Class="LemonPlatform.Module.Json.Views.JsonView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,19 +7,95 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" 
       d:DesignWidth="800"
-      xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
       xmlns:controls="clr-namespace:LemonPlatform.Module.Json.Controls"
+      Loaded="Page_Loaded"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <Grid>
-        <ScrollViewer
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <GroupBox Header="Configuration" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <Button Command="{Binding InfoCommand}" Width="80" Content="Info" Height="30" Margin="10"/>
+                    <Button Command="{Binding SaveCommand}" CommandParameter="{Binding ElementName=treeSKElement}" Width="80" Content="Save" Height="30" Margin="10"/>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Command" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Key: " HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBox Width="40" Height="30" Margin="10" Text="{Binding Key,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Command="{Binding AddCommand}" Width="100" Content="Add" Height="30" Margin="10"/>
+                    <Button Command="{Binding RemoveCommand}" Width="100" Content="Remove" Height="30" Margin="10"/>
+                    <Button Command="{Binding FindCommand}" Width="100" Content="Find" Height="30" Margin="10"/>
+                </StackPanel>
+            </GroupBox>
+        </StackPanel>
+
+        <Grid Grid.Row="1" Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <GroupBox Header="Raw Data" Grid.Row="0" Margin="3">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="4*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <TextBox 
+                            Text="{Binding Input}" 
+                            TextWrapping="Wrap" 
+                            AcceptsReturn="True"
+                            AcceptsTab="True"
+                            VerticalScrollBarVisibility="Auto" 
+                            VerticalContentAlignment="Top"/>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <ComboBox
+                            Grid.Column="0"
+                            Margin="5"
+                            ItemsSource="{Binding Algorithms}"
+                            SelectedItem="{Binding SelectAlgorithmItem, Mode = TwoWay, UpdateSourceTrigger = PropertyChanged}">
+                            </ComboBox>
+                            <Button Grid.Column="1" Command="{Binding LoadCommand}" Content="Load" Margin="5"/>
+                        </Grid>
+                    </Grid>
+                </GroupBox>
+
+                <GroupBox Header="Response" Grid.Row="1" Margin="3">
+                    <TextBox 
+                        Text="{Binding Response}" 
+                        TextWrapping="Wrap" 
+                        AcceptsReturn="True"
+                        AcceptsTab="True"
+                        VerticalScrollBarVisibility="Auto" 
+                        VerticalContentAlignment="Top"/>
+                </GroupBox>
+            </Grid>
+            <ScrollViewer
                 Grid.Column="0"
                 x:Name="sv"
                 VerticalScrollBarVisibility="Auto"
                 HorizontalScrollBarVisibility="Auto">
-            <Border BorderBrush="Yellow" BorderThickness="2">
-                <controls:TreeSKElement TreeRender="{Binding Render,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-            </Border>
-        </ScrollViewer>
+                <controls:TreeSKElement 
+                    x:Name="treeSKElement"
+                    Width="{Binding ElementName=sv,Path=ActualWidth}"
+                    Height="{Binding ElementName=sv,Path=ActualHeight}"
+                    TreeRender="{Binding Render,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                    SizeChanged="TreeSKElement_SizeChanged"/>
+            </ScrollViewer>
+        </Grid>
     </Grid>
-</UserControl>
+</Page>
