--- a/LemonPlatform.Module.Tools/Views/CompareToolView.xaml
+++ b/LemonPlatform.Module.Tools/Views/CompareToolView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LemonPlatform.Module.Tools.Views.CompareToolView"
+﻿<Page x:Class="LemonPlatform.Module.Tools.Views.CompareToolView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -99,4 +99,4 @@
             </GroupBox>
         </materialDesign:Card>
     </Grid>
-</UserControl>
+</Page>
