--- a/LemonPlatform.Wpf/Views/MainWindow.xaml
+++ b/LemonPlatform.Wpf/Views/MainWindow.xaml
@@ -143,7 +143,9 @@
                             Background="{DynamicResource MaterialDesignBody}"
                             IsBusy="{Binding IsBusy,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                             IsBusyAtStartup="False">
-                            <ContentControl Content="{Binding CurrentPage, UpdateSourceTrigger=PropertyChanged, FallbackValue={x:Null}}" x:Name="xContent"/>
+                            <ContentControl 
+                                Content="{Binding CurrentPage, UpdateSourceTrigger=PropertyChanged, FallbackValue={x:Null}}"
+                                x:Name="xContent"/>
                         </busyMask:BusyMask>
                     </ScrollViewer>
                 </Grid>
