--- a/LemonPlatform.Module.DataStructure/Views/SkipListView.xaml
+++ b/LemonPlatform.Module.DataStructure/Views/SkipListView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:LemonPlatform.Module.DataStructure.Views"
              xmlns:controls="clr-namespace:LemonPlatform.Core.Controls;assembly=LemonPlatform.Core"
              mc:Ignorable="d" 
+             Loaded="Page_Loaded"
              d:DesignHeight="450"
              d:DesignWidth="800">
     <Grid Margin="10">
