--- a/LemonPlatform.Module.DataStructure/Views/AVLTreeView.xaml
+++ b/LemonPlatform.Module.DataStructure/Views/AVLTreeView.xaml
@@ -9,7 +9,7 @@
       mc:Ignorable="d" 
       Loaded="Page_Loaded"
       d:DesignHeight="450" 
-      d:DesignWidth="800">
+      d:DesignWidth="1000">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -33,6 +33,15 @@
                     <Button Command="{Binding AddCommand}" Width="100" Content="Add" Height="30" Margin="10"/>
                     <Button Command="{Binding RemoveCommand}" Width="100" Content="Remove" Height="30" Margin="10"/>
                     <Button Command="{Binding FindCommand}" Width="100" Content="Find" Height="30" Margin="10"/>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Demo" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <Button Command="{Binding LLCommand}" Width="50" Content="LL" Height="30" Margin="10"/>
+                    <Button Command="{Binding RRCommand}" Width="50" Content="RR" Height="30" Margin="10"/>
+                    <Button Command="{Binding LRCommand}" Width="50" Content="LR" Height="30" Margin="10"/>
+                    <Button Command="{Binding RLCommand}" Width="50" Content="RL" Height="30" Margin="10"/>
                 </StackPanel>
             </GroupBox>
         </StackPanel>
