--- a/LemonPlatform.Module.Game/Puzzles/Themes/Internal/CalendarBoxItem.xaml
+++ b/LemonPlatform.Module.Game/Puzzles/Themes/Internal/CalendarBoxItem.xaml
@@ -4,7 +4,8 @@
     xmlns:local="clr-namespace:LemonPlatform.Module.Game.Puzzles.Controls">
 
     <Style TargetType="{x:Type TextBlock}" x:Key="DayStyle">
-        <Setter Property="Text" Value="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Content,StringFormat={}{0}}"/>
+        <Setter Property="Text" Value="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Content}"/>
+        <Setter Property="Foreground" Value="White"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
