--- a/LemonPlatform.Module.Game/Puzzles/Themes/Internal/CalendarBoxItem.xaml
+++ b/LemonPlatform.Module.Game/Puzzles/Themes/Internal/CalendarBoxItem.xaml
@@ -1,19 +1,22 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:local="clr-namespace:LemonPlatform.Module.Game.Puzzles.Controls">
 
-    <Style TargetType="{x:Type TextBlock}" x:Key="DayStyle">
+    <Style TargetType="{x:Type TextBlock}" x:Key="DayStyle" BasedOn="{StaticResource MaterialDesignBodyMediumTextBlock}">
         <Setter Property="Text" Value="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Content}"/>
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="{DynamicResource MaterialDesignBody}" />
+        <Setter Property="FontWeight" Value="Medium" />
+        <Setter Property="FontSize" Value="14" />
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontFamily" Value="{materialDesign:MaterialDesignFont}" />
     </Style>
 
     <Style x:Key="SquareBorderStyle" TargetType="Border">
-        <Setter Property="Height" Value="{Binding Width, RelativeSource={RelativeSource Self}}"/>
-        <Setter Property="BorderBrush" Value="Gray"/>
-        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="LightGray"/>
+        <Setter Property="BorderThickness" Value="0.5"/>
     </Style>
 
     <Style TargetType="{x:Type local:CalendarBoxItem}">
