--- a/LemonPlatform.Module.Game/Views/APuzzleADayView.xaml
+++ b/LemonPlatform.Module.Game/Views/APuzzleADayView.xaml
@@ -7,7 +7,7 @@
       xmlns:controls ="clr-namespace:LemonPlatform.Module.Game.Puzzles.Controls"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       mc:Ignorable="d" 
-      d:DesignHeight="600" 
+      d:DesignHeight="800" 
       d:DesignWidth="800">
     <Page.Resources>
         <ResourceDictionary Source="/LemonPlatform.Module.Game;component/Puzzles/Themes/Generic.xaml"/>
@@ -16,12 +16,12 @@
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition/>
+            <RowDefinition Height ="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Margin="15" Grid.Row="0">
             <TextBlock Text="Select Date:" TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
-            <DatePicker Name="datePicker" SelectedDate="{Binding SelectedDate}"/>
+            <DatePicker Name="datePicker" Foreground="{DynamicResource MaterialDesignBody}" SelectedDate="{Binding SelectedDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
 
             <Separator BorderBrush="Gray" BorderThickness="1" Margin="10 0">
                 <Separator.LayoutTransform>
@@ -35,7 +35,13 @@
                 <materialDesign:PackIcon Kind="Search" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </Button>
         </StackPanel>
-        <controls:PuzzlePanel Grid.Row="1" SelectedDate="{Binding ElementName=datePicker,Path=SelectedDate}" PuzzleItems="{Binding PuzzleItems}"/>
+        <controls:PuzzlePanel
+            Grid.Row="1" 
+            Height="500"
+            Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
+            SelectedDate="{Binding ElementName=datePicker,Path=SelectedDate}" 
+            PuzzleItems="{Binding PuzzleItems}"
+            Margin="20" />
         <Grid Grid.Row="2" Margin="10" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
