--- a/LemonPlatform.Module.Game/Views/APuzzleADayView.xaml
+++ b/LemonPlatform.Module.Game/Views/APuzzleADayView.xaml
@@ -8,7 +8,7 @@
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       mc:Ignorable="d" 
       d:DesignHeight="800" 
-      d:DesignWidth="800">
+      d:DesignWidth="900">
     <Page.Resources>
         <ResourceDictionary Source="/LemonPlatform.Module.Game;component/Puzzles/Themes/Generic.xaml"/>
     </Page.Resources>
@@ -17,7 +17,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height ="*"/>
-            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Margin="15" Grid.Row="0">
             <TextBlock Text="Select Date:" TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
@@ -34,20 +33,57 @@
             <Button Margin="10 0 0 0" Command="{Binding SearchOneCommand}" Content="Search One"/>
             <Button Margin="10 0 0 0" Command="{Binding SearchAllCommand}" Content="Search All"/>
         </StackPanel>
-        <controls:PuzzlePanel
-            Grid.Row="1" 
-            Height="500"
-            Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
-            SelectedDate="{Binding ElementName=datePicker,Path=SelectedDate}" 
-            PuzzleItems="{Binding PuzzleItems}"
-            Margin="20" />
-        <Grid Grid.Row="2" Margin="10" >
+        <Grid Grid.Row="1" x:Name="grid">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
-            <Button Height="30" Width="100" Grid.Column="0" Content="Pre" Command="{Binding PreCommand}"/>
-            <Button Height="30" Width="100" Grid.Column="1" Content="Next" Command="{Binding NextCommand}"/>
+            <ScrollViewer Grid.Column="0" MaxHeight="{Binding ElementName=grid,Path=ActualHeight}" VerticalScrollBarVisibility="Auto">
+                <ListBox 
+                    x:Name="desk"
+                    Margin="10"
+                    ItemsSource="{Binding Desks}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <controls:PuzzlePanel 
+                                Height="150"
+                                PuzzleItems="{Binding DeskItems}"
+                                Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
+                                SelectedDate="{Binding ElementName=datePicker,Path=SelectedDate}"
+                                Rows="4"
+                                Columns="4"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                </ListBox>
+            </ScrollViewer>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height ="auto"/>
+                </Grid.RowDefinitions>
+                <controls:PuzzlePanel
+                    Height="500"
+                    Grid.Row="0"
+                    Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
+                    SelectedDate="{Binding ElementName=datePicker,Path=SelectedDate}" 
+                    PuzzleItems="{Binding PuzzleItems}"
+                    Rows="8"
+                    Columns="8"
+                    Margin="20" />
+                <Grid Margin="10" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Button Height="30" Width="100" Grid.Column="0" Content="Pre" Command="{Binding PreCommand}"/>
+                    <Button Height="30" Width="100" Grid.Column="1" Content="Next" Command="{Binding NextCommand}"/>
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
