--- a/LemonPlatform.Module.Game/Views/APuzzleADayView.xaml
+++ b/LemonPlatform.Module.Game/Views/APuzzleADayView.xaml
@@ -13,25 +13,44 @@
         <ResourceDictionary Source="/LemonPlatform.Module.Game;component/Puzzles/Themes/Generic.xaml"/>
     </Page.Resources>
 
-    <Grid Margin="15">
+    <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height ="*"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Margin="15" Grid.Row="0">
-            <TextBlock Text="Select Date:" TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
-            <DatePicker Name="datePicker" Foreground="{DynamicResource MaterialDesignBody}" SelectedDate="{Binding SelectedDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+            <GroupBox Header="Configuration" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Date:" TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
+                    <DatePicker Name="datePicker" Foreground="{DynamicResource MaterialDesignBody}" SelectedDate="{Binding SelectedDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
 
-            <Separator BorderBrush="Gray" BorderThickness="1" Margin="10 0">
-                <Separator.LayoutTransform>
-                    <RotateTransform Angle="90" />
-                </Separator.LayoutTransform>
-            </Separator>
+                    <Separator BorderBrush="Gray" BorderThickness="1" Margin="10 0">
+                        <Separator.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </Separator.LayoutTransform>
+                    </Separator>
 
-            <TextBlock Text="Select Puzzle:" TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
-            <ComboBox ItemsSource="{Binding PuzzleTypes}" SelectedItem="{Binding SelectPuzzleTypeItem}"/>
-            <Button Margin="10 0 0 0" Command="{Binding SearchOneCommand}" Content="Search One"/>
-            <Button Margin="10 0 0 0" Command="{Binding SearchAllCommand}" Content="Search All"/>
+                    <TextBlock Text="Puzzle:" TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
+                    <ComboBox ItemsSource="{Binding PuzzleTypes}" SelectedItem="{Binding SelectPuzzleTypeItem}"/>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Random Command" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <Button Margin="10 0 0 0" Command="{Binding SearchRandomOneCommand}" Content="Random One"/>
+                    <Button Margin="10 0 0 0" Command="{Binding SearchRandomAllCommand}" Content="Random All"/>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Schedule Command" Margin="5">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Schedule: " TextAlignment="Center" VerticalAlignment="Center" FontSize="12" FontFamily="Segoe UI Black" Margin="10 0"/>
+                    <CheckBox VerticalAlignment="Center" IsChecked="{Binding IsSchedule}"/>
+                    <Button Margin="10 0 0 0" Command="{Binding SearchScheduleOneCommand}" Content="Schedule One"/>
+                    <Button Margin="10 0 0 0" Command="{Binding SearchScheduleAllCommand}" Content="Schedule All"/>
+                    <Button Margin="10 0 0 0" Command="{Binding ClearAllCommand}" Content="Clear"/>
+                </StackPanel>
+            </GroupBox>
         </StackPanel>
         <Grid Grid.Row="1" x:Name="grid">
             <Grid.ColumnDefinitions>
@@ -63,7 +82,7 @@
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
-                    
+
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center"/>
@@ -86,8 +105,8 @@
                     Drop="PuzzlePanel_Drop"
                     Rows="8"
                     Columns="8"
-                    Margin="20" />
-                <Grid Margin="10" Grid.Row="1">
+                    Margin="5" />
+                <Grid Margin="5" Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
