--- a/LemonPlatform.Wpf/Views/Pages/HomeView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/HomeView.xaml
@@ -10,27 +10,10 @@
 
     <Grid Margin="5">
         <TextBlock Text="Home Page" />
-        <materialDesign:PopupBox
-            StaysOpen="False"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Foreground="White"
-            materialDesign:RippleAssist.Feedback="{x:Null}"
-            Background="{DynamicResource PrimaryHueMidBrush}">
-            <materialDesign:PopupBox.ToggleContent>
-                <Button Content="Click Me"
-                        Style="{StaticResource MaterialDesignFlatButton}" 
-                        />
-            </materialDesign:PopupBox.ToggleContent>
-            <materialDesign:PopupBox.PopupContent>
-                <StackPanel>
-                    <Button Content="User Info"/>
-                    <Separator />
-                    <Button Content="Check Update" />
-                    <Separator />
-                    <Button Content="Exit"/>
-                </StackPanel>
-            </materialDesign:PopupBox.PopupContent>
-        </materialDesign:PopupBox>
+        <Button Height="60" 
+                Width="200"
+                Content="Capture"
+                Command="{Binding ScreenCaptureCommand}" 
+                Margin="100"/>
     </Grid>
 </UserControl>
